ARROW-11163: [C++] Fix reading of compressed IPC/Feather files written with Arrow 0.17

(obviously still needs test, but already putting the fix I was testing locally in a draft PR)

Closes #9128 from jorisvandenbossche/ARROW-11163

Authored-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>